feat: add animals

--- a/Pet-Story/src/app/start-page/components/main-image/main-image.component.html
+++ b/Pet-Story/src/app/start-page/components/main-image/main-image.component.html
@@ -1,1 +1,26 @@
-<p>main-image works!</p>
+<section class="main-image">
+  <div class="main-image__content">
+    <div class="main-image__part-top">
+      <div class="main-image__title">
+        <div class="main-image__title-image">
+          <img src="assets/images/bamboo-cap.png" alt="man-in-hat" class="main-imaige__title-man">
+        </div>
+        <div class="main-image__title-content">
+          <div class="main-image__content-title">The Backstage of the Wilderness World.</div>
+          <div class="main-image__content-text">The site was founded on the basis of a volunteer movement to protect and care for animals.</div>
+          <div class="main-image__content-subtitle">How it works </div>
+          <div class="main-image__content-text">The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</div>
+        </div>
+      </div>
+      <div class="main-image__img">
+        <img class="main-image__image" src="assets/images/flower_foto1.png" alt="flowers">
+      </div>
+    </div>
+    <div class="main-image__slider">
+      <div class="main-image__left"></div>
+      <div class="main-image__slider-wrapper"></div>
+      <div class="main-image__right"></div>
+    </div>
+  </div>
+
+</section>
