--- a/Pet-Story/src/app/start-page/components/main-image/main-image.component.scss
+++ b/Pet-Story/src/app/start-page/components/main-image/main-image.component.scss
@@ -1,6 +1,10 @@
 @import "../../../../styles.scss";
+*{
+  box-sizing: border-box;
+}
 
 .main-image {
+  background: $white;
   &__content {
     width: 100%;
   }
@@ -69,5 +73,95 @@
   }
 
   &__slider {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
+  &__slider-wrapper {
+    display: grid;
+    grid-auto-flow: row dense;
+    grid-template-columns: repeat(12, 366px);
+    grid-template-rows: 1fr 1fr;
+    gap: 20px 30px;
+    transition: 1.5s;
+  }
+
+  &__slider-container {
+    overflow: hidden;
+    width: 1158px;
+    height: 872px;
+  }
+
+  &__button {
+    display: flex;
+    width: 62px;
+    height: 62px;
+    border-radius: 100%;
+    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+    align-items: center;
+    justify-content: center;
+    outline: none;
+    border: none;
+    &:hover {
+      cursor: pointer;
+      background: darken($color: $orange, $amount: 5);
+    }
+    &:active {
+      cursor: pointer;
+      background: $green;
+    }
+  }
+  &__button_right {
+    transform: rotate(-180deg);
+  }
+}
+
+.animal {
+  width: 366px;
+  height: 426px;
+  border: 1px solid $orange;
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+  transition: 0.5s;
+  &:hover &__overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.7);
+    transition: 0.5s;
+  }
+  &:hover &__info {
+    position: relative;
+    margin-top: -150px;
+    z-index: 50;
+    transition: 0.7s;
+  }
+  &:hover &__name,
+  &:hover &__country {
+    color: white;
+  }
+
+  &__name {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 140%;
+    text-transform: uppercase;
+    color: $black;
+  }
+  &__country {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 120%;
+    color: $black;
+  }
+  &__image {
+    display: block;
   }
 }
