--- a/Pet-Story/src/app/start-page/components/main-image/main-image.component.html
+++ b/Pet-Story/src/app/start-page/components/main-image/main-image.component.html
@@ -45,6 +45,17 @@
         </button>
       </div>
     </div>
+    <div class="main-image__part-bottom">
+      <div class="main-image__bottom-left">
+        <img src="assets/images/palm_foto.png" alt="palm">
+      </div>
+      <div class="main-image__bottom-center">
+        <button class="main-image__bottom-button">choose your favorite</button>
+      </div>
+      <div class="main-image__bottom-right">
+        <img src="assets/images/flower-bottom.png" alt="flower">
+      </div>
+    </div>
   </div>
 
 </section>
