--- a/Pet-Story/src/styles.scss
+++ b/Pet-Story/src/styles.scss
@@ -6,12 +6,13 @@ $orange: #f9804b;
 $yellow: #ffee2e;
 $rad: #d31414;
 $black-blue: #333b41;
-$gray: gray;
+$gray: #767474;
 $gray_smoky: #ababab;
 $light_gray: #f1f3f2;
 $frosted_glass_white: #fdfdff;
 $black: #000000;
 $white: #ffffff;
+$disabled: #ffffff;
 
 * {
   margin: 0;
