--- a/Pet-Story/src/app/start-page/components/main-image/main-image.component.scss
+++ b/Pet-Story/src/app/start-page/components/main-image/main-image.component.scss
@@ -1,5 +1,5 @@
 @import "../../../../styles.scss";
-*{
+* {
   box-sizing: border-box;
 }
 
@@ -13,7 +13,6 @@
     display: flex;
     justify-content: flex-end;
     padding-bottom: 180px;
-
   }
   &__title {
     width: calc(100% - 200px);
@@ -42,32 +41,20 @@
     width: 100%;
   }
   &__content-title {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 48px;
-    line-height: 120%;
+    @include fonts(48px, 120%);
     color: $black-blue;
     padding-bottom: 25px;
   }
 
   &__content-subtitle {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 120%;
+    @include fonts(24px, 120%);
     color: $black-blue;
     padding-bottom: 25px;
     margin-top: 55px;
   }
 
   &__content-text {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 140%;
+    @include fonts(16px, 140%);
     color: $black-blue;
   }
 
@@ -98,14 +85,14 @@
     width: 62px;
     height: 62px;
     border-radius: 100%;
-    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+    background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
     align-items: center;
     justify-content: center;
     outline: none;
     border: none;
     &:hover {
       cursor: pointer;
-      background: #E47209;
+      background: #e47209;
     }
     &:active {
       cursor: pointer;
@@ -125,13 +112,9 @@
   }
 
   &__bottom-button {
-    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);;
+    background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
     border-radius: 25px;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 150%;
+    @include fonts(16px, 150%, 500);
     text-align: center;
     text-transform: uppercase;
     color: $white;
@@ -140,7 +123,7 @@
     border: none;
     &:hover {
       cursor: pointer;
-      background: #E47209;
+      background: #e47209;
     }
     &:active {
       cursor: pointer;
@@ -156,7 +139,7 @@
     justify-content: space-between;
     align-items: flex-end;
     position: relative;
-    top: 0px;
+    top: 3px;
     height: 240px;
   }
 
@@ -192,20 +175,12 @@
   }
 
   &__name {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 140%;
+    @include fonts(16px, 140%, 500);
     text-transform: uppercase;
     color: $black;
   }
   &__country {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 15px;
-    line-height: 120%;
+    @include fonts(15px, 120%, 300);
     color: $black;
   }
   &__image {
