--- a/Pet-Story/src/styles.scss
+++ b/Pet-Story/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,400,500,500italic,700,700italic,900,900italic);
 
 $green: #4b9200;
 $orange: #f9804b;
@@ -13,6 +13,8 @@ $frosted_glass_white: #fdfdff;
 $black: #000000;
 $white: #ffffff;
 $disabled: #ffffff;
+$orange-grad: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
+
 
 * {
   margin: 0;
@@ -26,4 +28,12 @@ $disabled: #ffffff;
 
 body {
   background: $gray_smoky;
+}
+
+@mixin fonts($size, $line-height, $weight: 400) {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: $weight;
+  font-size: $size;
+  line-height: $line-height;
 }
