--- a/Pet-Story/src/app/start-page/components/testimonails/testimonails.component.html
+++ b/Pet-Story/src/app/start-page/components/testimonails/testimonails.component.html
@@ -1,1 +1,14 @@
-<p>testimonails works!</p>
+<section>
+  <div>
+   <div class="slider" style="display: flex; width: 1000px; overflow-x: scroll; gap: 20px; flex-shrink: 0; flex-grow: 0;">
+    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
+    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
+    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
+    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
+    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
+    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
+    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
+    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
+   </div>
+  </div>
+</section>
