--- a/Pet-Story/src/app/start-page/components/testimonails/testimonails.component.html
+++ b/Pet-Story/src/app/start-page/components/testimonails/testimonails.component.html
@@ -1,14 +1,21 @@
 <section>
-  <div>
-   <div class="slider" style="display: flex; width: 1000px; overflow-x: scroll; gap: 20px; flex-shrink: 0; flex-grow: 0;">
-    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
-    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
-    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
-    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
-    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
-    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
-    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
-    <div class="slide" style="min-width: 300px; height: 300px; background: red; flex-shrink: 0; flex-grow: 0;"></div>
-   </div>
+  <div class="slider" style="width: 60%; background: white; margin: 0 auto; ">
+    <swiper
+      [slidesPerView]="3"
+      [spaceBetween]="50"
+      (swiper)="setControlledSwiper($event)"
+      [scrollbar]="{ draggable: true }"
+      [watchSlidesProgress]="true"
+      [keyboard]="{
+        enabled: true
+      }"
+    >
+      <ng-template swiperSlide><div style="height: 400px;">Slide 1</div></ng-template>
+      <ng-template swiperSlide><div style="height: 400px;">Slide 2</div></ng-template>
+      <ng-template swiperSlide><div style="height: 400px;">Slide 3</div></ng-template>
+      <ng-template swiperSlide><div style="height: 400px;">Slide 4</div></ng-template>
+      <ng-template swiperSlide><div style="height: 400px;">Slide 5</div></ng-template>
+      <ng-template swiperSlide><div style="height: 400px;">Slide 6</div></ng-template>
+    </swiper>
   </div>
 </section>
