--- a/Pet-Story/src/app/start-page/components/testimonails/card/card.component.html
+++ b/Pet-Story/src/app/start-page/components/testimonails/card/card.component.html
@@ -1,3 +1,13 @@
 <div class="card">
-  
+  <div class="card__author">
+    <div class="card__foto"><img src="{{card.image}}" alt="user image"> </div>
+    <div class="card__author-info">
+      <h3 class="card__title">{{card.title}}</h3>
+      <div class="card__subtitle">
+        <span class="card__place">{{card.place}}</span>
+        <span class="card__date">{{card.date}}</span>
+      </div>
+    </div>
+  </div>
+  <div class="card__text">{{card.text}}</div>
 </div>
