--- a/Pet-Story/src/app/start-page/components/testimonails/card/card.component.html
+++ b/Pet-Story/src/app/start-page/components/testimonails/card/card.component.html
@@ -3,10 +3,10 @@
     <div class="card__foto"><img src="{{card.image}}" alt="user image"> </div>
     <div class="card__author-info">
       <h3 class="card__title">{{card.title}}</h3>
-      <div class="card__subtitle">
-        <span class="card__place">{{card.place}}</span>
-        <span class="card__date">{{card.date}}</span>
-      </div>
+      <ul class="card__subtitle">
+        <li class="card__place">{{card.place}}</li>
+        <li class="card__place">{{card.date}}</li>
+      </ul>
     </div>
   </div>
   <div class="card__text">{{card.text}}</div>
