feat: add button component

--- a/Pet-Story/src/app/start-page/components/testimonails/testimonails.component.html
+++ b/Pet-Story/src/app/start-page/components/testimonails/testimonails.component.html
@@ -16,5 +16,7 @@
     </swiper>
 
   </div>
-  <div><button>leave feedback</button></div>
+  <div class="button">
+    <app-button [content]="content" class="test"></app-button>
+  </div>
 </section>
