--- a/Pet-Story/src/app/start-page/components/testimonails/testimonails.component.scss
+++ b/Pet-Story/src/app/start-page/components/testimonails/testimonails.component.scss
@@ -43,14 +43,20 @@ app-testimonails
 .testimonials {
   width: 100%;
   background: $white;
-  padding-top: 140px;
+  padding: 140px 220px;
+
   &__title {
     @include fonts(36px, 130%);
     text-align: center;
     color: $black-blue;
     margin-bottom: 47px;
   }
+
 }
 .swiper {
   height: 440px;
+}
+
+.testimonials div.button app-button.test  button.button {
+  border-radius: 5px;
 }
