feat: add footer

--- a/Pet-Story/src/app/core/components/footer/footer.component.html
+++ b/Pet-Story/src/app/core/components/footer/footer.component.html
@@ -1,1 +1,14 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="footer__top">
+    <div class="footer__subsrcibe">
+      <div class="footer__logo"></div>
+      <form class="footer__form" action=""></form>
+    </div>
+    <div class="footer__button"></div>
+  </div>
+  <div class="footer__bottom">
+    <div class="footer__nets"></div>
+    <div class="footer__links"></div>
+    <div class="footer__design"></div>
+  </div>
+</footer>
