fix: finish testimonials

--- a/Pet-Story/src/app/start-page/components/testimonails/testimonails.component.html
+++ b/Pet-Story/src/app/start-page/components/testimonails/testimonails.component.html
@@ -19,4 +19,7 @@
   <div class="button">
     <app-button [content]="content" class="test"></app-button>
   </div>
+  <div class="testimonials__leav">
+    <img src="assets/images/leav_foto.png">
+  </div>
 </section>
