--- a/Pet-Story/src/app/start-page/components/main-image/main-image.component.scss
+++ b/Pet-Story/src/app/start-page/components/main-image/main-image.component.scss
@@ -121,6 +121,7 @@
     padding: 16px 50px 16px 50px;
     outline: none;
     border: none;
+    margin-right: -76px;
     &:hover {
       cursor: pointer;
       background: #e47209;
