--- a/Pet-Story/src/app/core/components/footer/footer.component.html
+++ b/Pet-Story/src/app/core/components/footer/footer.component.html
@@ -33,8 +33,8 @@
       </ul>
     </div>
     <div class="footer__design">
-      <div class="footer__design-author"></div>
-      <div class="footer__design-copyright"></div>
+      <div class="footer__design-author">Designed by Alisa Samborskaya</div>
+      <div class="footer__design-copyright">©RSSchool & ©Yem Digital 2021</div>
     </div>
   </div>
 </footer>
