feat: add leaflet and map

--- a/Pet-Story/src/app/map/map.component.html
+++ b/Pet-Story/src/app/map/map.component.html
@@ -1,4 +1,4 @@
 <section class="map">
-  <img src="assets/images/map.svg" all="world_map">
-
+  <!-- <img src="assets/images/map.svg" all="world_map"> -->
+  <div id="map"></div>
 </section>
