--- a/Pet-Story/src/app/map/map.component.scss
+++ b/Pet-Story/src/app/map/map.component.scss
@@ -6,4 +6,54 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  position: relative;
 }
+#map {
+  height: calc(100vh - 500px);
+  width: 100%;
+  //max-width: 600px;
+}
+
+app-map #map .leaflet-control-zoom.leaflet-control-zoom .leaflet-control-zoom-in {
+  background-color: white;
+  border: 1px solid gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 50px;
+  text-decoration: none !important;
+}
+app-map #map .leaflet-control-zoom.leaflet-control-zoom .leaflet-control-zoom-out {
+  background-color: white;
+  border: 1px solid gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 50px;
+  text-decoration: none !important;
+}
+
+app-map #map .leaflet-control-zoom.leaflet-control-zoom  {
+position: absolute;
+right: 10px;
+bottom: 10px;
+}
+
+app-map #map .leaflet-control-zoom.leaflet-control-zoom .leaflet-control-zoom-out span {
+font-size: 30px;
+text-decoration: none !important;
+color: #000;
+}
+
+app-map #map .leaflet-control-zoom.leaflet-control-zoom .leaflet-control-zoom-in span {
+  font-size: 30px;
+  text-decoration: none !important;
+  color: #000;
+  }
+
+  app-map #map .leaflet-control-attribution.leaflet-control {
+    display: none;
+  }
