--- a/Pet-Story/src/app/core/components/header/header.component.scss
+++ b/Pet-Story/src/app/core/components/header/header.component.scss
@@ -2,7 +2,7 @@
 
 :host {
   width: 100%;
-  max-width: 1600px;  
+  max-width: 1600px;
   margin: 0 auto;
   padding: 0;
   height: 80px;
@@ -15,7 +15,6 @@
   background: $black;
   gap: 65px;
   height: 80px;
-  
 }
 
 .nav {
@@ -24,20 +23,25 @@
     align-items: center;
     gap: 60px;
   }
-  &__list-link {    
-      color: $white;
-      font-family: 'Roboto';
-      font-style: normal;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 140%;
-      list-style: none;
-      text-decoration: none;
-      &:hover{
-        text-decoration: underline;
-        cursor: pointer;
-      }
-    
+
+  &__list-item {
+    list-style: none;
+  }
+
+  &__list-link {
+    color: $white;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 140%;
+    list-style: none;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
   }
 
   &__list-link.active {
@@ -45,6 +49,3 @@
   }
 
 }
-
-
-
