--- a/Pet-Story/src/app/start-page/components/pick/pick.component.scss
+++ b/Pet-Story/src/app/start-page/components/pick/pick.component.scss
@@ -104,13 +104,16 @@
   border-radius: 5px;
   width: 170px;
   height: 245px;
+  background: none;
+  border: none;
+  box-sizing: border-box;
   &__image {
     margin-bottom: 30px;
     border: 1px solid $orange;
     background: $white;
     border-radius: 5px;
     width: 170px;
-    height: 170px;
+    min-height: 170px;
     display: flex;
     align-items: center;
     justify-content: center;
