feat: add child routes

--- a/Pet-Story/src/app/animals/components/navigation/navigation.component.html
+++ b/Pet-Story/src/app/animals/components/navigation/navigation.component.html
@@ -1,1 +1,40 @@
-<p>navigation works!</p>
+<nav class="nav">
+  <ul class="nav__list">
+    <li class="nav__list-item">
+      <a routerLink="" class="nav__link">
+        <img class="nav__icon" src="assets/images/gorilla_icon.svg"></a>
+    </li>
+    <li class="nav__list-item">
+      <a routerLink="crocodile" class="nav__link">
+        <img class="nav__icon" src="assets/images/gorilla_icon.svg">
+      </a>
+    </li>
+    <li class="nav__list-item">
+      <a routerLink="panda" class="nav__link">
+        <img class="nav__icon" src="assets/images/gorilla_icon.svg">
+      </a>
+    </li>
+    <li class="nav__list-item">
+      <a routerLink="eagle" class="nav__link">
+        <img class="nav__icon" src="assets/images/gorilla_icon.svg">
+      </a>
+    </li>
+    <li class="nav__list-item">
+      <a routerLink="sloth" class="nav__link">
+        <img class="nav__icon" src="assets/images/gorilla_icon.svg">
+      </a>
+    </li>
+    <li class="nav__list-item">
+      <a routerLink="penguin" class="nav__link">
+        <img class="nav__icon" src="assets/images/gorilla_icon.svg">
+      </a>
+    </li>
+    <li class="nav__list-item">
+      <a routerLink="cheetah" class="nav__link">
+        <img class="nav__icon" src="assets/images/gorilla_icon.svg">
+      </a>
+    </li>
+
+
+  </ul>
+</nav>
