--- a/Pet-Story/src/app/core/components/header/header.component.html
+++ b/Pet-Story/src/app/core/components/header/header.component.html
@@ -13,7 +13,7 @@
         <a class="nav__list-link" routerLink="/map" routerLinkActivate="active" [class.active]="url.includes('map')">Map</a>
       </li>
       <li class="nav__list-item" >
-        <a class="nav__list-link" routerLink="/animals" routerLinkActivate="active" [class.active]="url.includes('animals')">Zoos</a>
+        <a class="nav__list-link" routerLink="/animals/gorilla" routerLinkActivate="active" [class.active]="url.includes('animals')">Zoos</a>
       </li>
       <li class="nav__list-item">
         <a class="nav__list-link" routerLink="/contact" routerLinkActivate="active" [class.active]="url.includes('contact')">Contact us</a>
