--- a/Pet-Story/src/app/animals/animals.component.html
+++ b/Pet-Story/src/app/animals/animals.component.html
@@ -1,1 +1,6 @@
-<p>animals works!</p>
+<section class="animals">
+  <div class="animals__sidebar">
+    <app-navigation></app-navigation>
+  </div>
+  <router-outlet></router-outlet>
+</section>
