--- a/Pet-Story/src/app/app.component.scss
+++ b/Pet-Story/src/app/app.component.scss
@@ -1,8 +1,12 @@
 .page {
   width: 100%;
-  max-width: 1600px;  
+  max-width: 1600px;
   margin: 0 auto;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
 }
 
 *, ul, li {
