fix: change styles

--- a/Pet-Story/src/app/animals/components/navigation/navigation.component.scss
+++ b/Pet-Story/src/app/animals/components/navigation/navigation.component.scss
@@ -2,6 +2,10 @@
 
 .nav {
   background: $orange-grad;
+  &__list {
+    margin: 0;
+    padding: 0;
+  }
   &__list-item {
     list-style: none;
   }
