--- a/Pet-Story/src/app/core/components/footer/footer.component.scss
+++ b/Pet-Story/src/app/core/components/footer/footer.component.scss
@@ -38,6 +38,9 @@
       color: $white;
     }
   }
+  &__link.active {
+    color: $orange;
+  }
   &__design-author,
   &__design-copyright {
     @include fonts(16px, 130%, 100);
@@ -48,6 +51,7 @@
     margin-bottom: 44px;
   }
 }
+
 
 .footer div.footer__button app-button.test  button.button {
   border-radius: 5px;
