feat: add video

--- a/Pet-Story/src/app/animals/components/gorilla/gorilla.component.html
+++ b/Pet-Story/src/app/animals/components/gorilla/gorilla.component.html
@@ -1,1 +1,7 @@
-<p>gorilla works!</p>
+<div class="animal">
+  <h2 class="animal__title">Gorilla camera</h2>
+  <div class="animal__youtube" >
+    <app-video></app-video>
+  </div>
+</div>
+
