--- a/Pet-Story/src/app/animals/components/navigation/navigation.component.html
+++ b/Pet-Story/src/app/animals/components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav class="nav">
   <ul class="nav__list">
     <li class="nav__list-item">
-      <a routerLink="" class="nav__link">
+      <a routerLink="gorilla" class="nav__link">
         <img class="nav__icon" src="assets/images/gorilla_icon.svg"></a>
     </li>
     <li class="nav__list-item">
