feat: add styles

--- a/Pet-Story/src/app/animals/animals.component.scss
+++ b/Pet-Story/src/app/animals/animals.component.scss
@@ -1,6 +1,11 @@
+@import '../../styles.scss';
+
 .animals {
   position: relative;
   min-height: calc(100vh - 500px);
+  padding-top: 40px;
+  b
+
   &__sidebar {
     position: absolute;
     left: 30px;
