--- a/Pet-Story/src/app/animals/components/video/video.component.html
+++ b/Pet-Story/src/app/animals/components/video/video.component.html
@@ -1,11 +1,10 @@
 <section class="video">
-  <!-- <iframe width="1162" height="652" src="https://www.youtube.com/embed/rgXWDk7rh4w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
   <swiper
     style="--swiper-navigation-color: #fff;--swiper-pagination-color: #fff"
     [spaceBetween]="10"
     [thumbs]="{ swiper: thumbsSwiper }"
     class="mySwiper2">
-    <ng-template swiperSlide>
+    <ng-template swiperSlide >
       <iframe width="1162" height="652" src="https://www.youtube.com/embed/rgXWDk7rh4w"
           frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
@@ -22,36 +21,20 @@
           allowfullscreen>
       </iframe>
     </ng-template>
-    <ng-template swiperSlide>
-      <iframe width="1162" height="652" src="https://www.youtube.com/embed/rgXWDk7rh4w"
-          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen>
-      </iframe>
-    </ng-template>
-    <ng-template swiperSlide>
-      <iframe width="1162" height="652" src="https://www.youtube.com/embed/rgXWDk7rh4w"
-          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen>
-      </iframe>
-    </ng-template>
-    <ng-template swiperSlide>
-        <iframe width="1162" height="652" src="https://www.youtube.com/embed/rgXWDk7rh4w"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
-    </ng-template>
-
   </swiper>
 
 
   <swiper (swiper)="thumbsSwiper = $event" [spaceBetween]="30" [slidesPerView]="4" [freeMode]="true" [navigation]="true"
   [watchSlidesProgress]="true" class="mySwiper" #Tswiper>
-  <ng-template swiperSlide><img src="assets/images/pandas.jpg" /></ng-template><ng-template
-    swiperSlide><img src="assets/images/pandas.jpg" /></ng-template><ng-template
-    swiperSlide><img src="assets/images/pandas.jpg" /></ng-template><ng-template
-    swiperSlide><img src="assets/images/pandas.jpg" /></ng-template><ng-template
-    swiperSlide><img src="assets/images/pandas.jpg" /></ng-template><ng-template
-    swiperSlide><img src="assets/images/pandas.jpg" /></ng-template>
+  <ng-template swiperSlide>
+    <img src="assets/images/pandas.jpg" />
+  </ng-template>
+  <ng-template swiperSlide>
+    <img src="assets/images/pandas.jpg" />
+  </ng-template>
+  <ng-template swiperSlide>
+    <img src="assets/images/pandas.jpg" />
+  </ng-template>
 </swiper>
 </section>
 
