--- a/Pet-Story/src/app/core/components/header/header.component.scss
+++ b/Pet-Story/src/app/core/components/header/header.component.scss
@@ -21,7 +21,9 @@
   &__list {
     display: flex;
     align-items: center;
-    gap: 60px;
+    gap: 57px;
+    margin: 0;
+    padding: 0;
   }
 
   &__list-item {
