--- a/Pet-Story/src/app/animals/components/navigation/navigation.component.html
+++ b/Pet-Story/src/app/animals/components/navigation/navigation.component.html
@@ -1,5 +1,6 @@
 <nav class="nav">
-  <ul class="nav__list">
+  <div class="nav__wrapper">
+      <ul class="nav__list" #slider [class.down]="down">
     <li class="nav__list-item" *ngFor="let link of links" >
       <a routerLink="{{link}}"
          class="nav__link"
@@ -9,4 +10,7 @@
       </a>
     </li>
   </ul>
+  </div>
+
+  <div class="nav__link" (click)="isDown()" [class.rotate]="isRotate"><img src="assets/images/arrow_down.svg"></div>
 </nav>
