feat: add info structure

--- a/Pet-Story/src/app/animals/components/info/info.component.html
+++ b/Pet-Story/src/app/animals/components/info/info.component.html
@@ -1,1 +1,21 @@
-<p>info works!</p>
+<section class="info">
+  <h2 class="info__title">Giant Panda</h2>
+  <div class="info__main">
+    <div class="info__foto"></div>
+    <div class="info__description">
+      <div class="info__content"></div>
+      <div class="info__button"></div>
+    </div>
+  </div>
+  <div class="info__line"></div>
+  <div class="info__full">
+    <div class="info__diet"></div>
+    <div class="info__range"></div>
+    <div class="info__habitat"></div>
+    <div class="info__general"></div>
+    <div class="info__features"></div>
+    <div class="info__lifestyle"></div>
+    <div class="info__habitat_two"></div>
+    <div class="info__diet_two"></div>
+  </div>
+</section>
