--- a/Pet-Story/src/app/animals/components/info/info.component.html
+++ b/Pet-Story/src/app/animals/components/info/info.component.html
@@ -9,7 +9,9 @@
   </div>
   <div class="info__line"></div>
   <div class="info__full">
-    <div class="info__diet"></div>
+    <div class="info__diet">
+      <span class="info__diet-title">Diet :</span><span class="info__diet-content">Herbivore (We provide a medley of fruits and vegetables to our western lowland gorillas)</span>
+    </div>
     <div class="info__range"></div>
     <div class="info__habitat"></div>
     <div class="info__general"></div>
