feat: add data and styles

--- a/Pet-Story/src/app/animals/components/gorilla/gorilla.component.html
+++ b/Pet-Story/src/app/animals/components/gorilla/gorilla.component.html
@@ -2,6 +2,7 @@
   <h2 class="animal__title">Gorilla camera</h2>
   <div class="animal__youtube" >
     <app-video></app-video>
+    <app-info></app-info>
   </div>
 </div>
 
