feat: add bottom image

--- a/Pet-Story/src/app/animals/components/gorilla/gorilla.component.html
+++ b/Pet-Story/src/app/animals/components/gorilla/gorilla.component.html
@@ -4,5 +4,11 @@
     <app-video></app-video>
     <app-info></app-info>
   </div>
+  <div class="animal__flowers">
+    <app-flowers></app-flowers>
+  </div>
+  <div class="animal__image">
+    <app-gorilla-foto [photoPath]="photoPath"></app-gorilla-foto>
+  </div>
 </div>
 
