--- a/Pet-Story/src/app/animals/components/info/info.component.html
+++ b/Pet-Story/src/app/animals/components/info/info.component.html
@@ -1,5 +1,5 @@
 <section class="info">
-  <h2 class="info__title">Giant Panda</h2>
+  <h2 class="info__title">Western Lowland Gorilla</h2>
   <div class="info__main">
     <div class="info__foto">
       <img src="assets/images/gorilla_info.png">
@@ -47,18 +47,18 @@
           <li class="info__list-item">Bark Grunt: Aggression</li>
           <li class="info__list-item">Chuckles: Playfulness</li>
         </ul>
-      
+
       <p class="info__text">Infants have three distinct vocalizations; these are similar to the cries of a human baby. They will typically cry when hurt or frightened, resulting in an immediate response from the mother.</p>
       <p class="info__text">Dominant males also have a distinctive smell that they use to communicate with other troops and to maintain contact with their own troop. Perhaps the most recognizable behavior performed by gorillas is chest-beating. It is primarily done by male gorillas at the end of a display meant to intimidate intruding males or predators. The sound can be heard for long distances. Females will chest-beat infrequently; they will typically beat their hands against the insides of their thighs. Chest-beating can also indicate playful behavior, however, especially in the young. Young gorillas play much like humans do, playing tag and doing somersaults.</p>
       <p class="info__text">Western lowland gorillas live in family groups known as troops. These troops can consist of 5 to 30 individuals, although the average size is 11. The group is led by a dominant silverback male and contains several adult females and their young. The females will typically bond with the silverback, but not necessarily with each other. The silverback will remain dominant for as long as he can defeat competing males.</p>
       <p class="info__text">There are several younger, blackback males that remain in the group until they are capable of challenging the silverback. These young males are often driven out of the troop to live a solitary life or to live in a smaller group with other bachelors until they establish their own troops. If a dominant silverback is displaced, the new dominant male will typically kill the infants in the troop, sending the females prematurely into reproductive cycling. This increases the male’s chances of siring offspring, as his time as the dominant male is uncertain. As such, females consider a male’s ability to fight paramount to their offspring’s survival.</p>
       <p class="info__text">Nesting typically occurs in the late afternoon, with the gorillas bedding down for the night at sundown. The females and their offspring will build nests of leaves and branches, while the dominant silverback will settle at the base of the tree, in order to protect his family. At Zoo Atlanta, while the gorillas are outside, their indoor areas are thoroughly cleaned; the walls and floors are scrubbed with <span class="info__important">disinfectant</span>. The gorillas are offered hay in their indoor area at night and nest with this material, replicating natural behavior.</p>
       <p class="info__text">In a troop, the single silverback male will mate with the females, siring all the offspring of the troop. Females generally reach reproductive maturity between 7 and 8 years of age, with males reaching maturity later, around 10 years of age, due to competition. The potential breeding season is year-round and gestation typically takes 256 days, or about 8.5 months. Labor can last anywhere from one to 4 hours. Babies are usually born singly; twins are rare. Newborns weigh between 3 and 5 pounds and are weaned around 2 to 3 years of age, but can be dependent on their mothers for up to 4 years. The average interval between births for a female gorilla is four to six years.</p>
-      
+
     </div>
     <div class="full__item">
       <h3 class="info__paragraf-name">Habitat: </h3>
-      <p class="info__text">Western lowland gorillas prefer the tall, lush tropical forest of west and central Africa. The herbs, shrubs and vines that make up its diet grow best where the open canopy allows plenty of light to reach the forest floor. These tropical forests also contain a much higher diversity of arboreal substrates and foods, in particular fruit, than mountainous habitats. Western lowland gorillas live primarily on the ground and build sleeping nests on the ground or in the trees for the night.</p>        
+      <p class="info__text">Western lowland gorillas prefer the tall, lush tropical forest of west and central Africa. The herbs, shrubs and vines that make up its diet grow best where the open canopy allows plenty of light to reach the forest floor. These tropical forests also contain a much higher diversity of arboreal substrates and foods, in particular fruit, than mountainous habitats. Western lowland gorillas live primarily on the ground and build sleeping nests on the ground or in the trees for the night.</p>
     </div>
     <div class="full__item">
       <h3 class="info__paragraf-name">Diet: </h3>
