--- a/Pet-Story/src/app/animals/components/video/video.component.html
+++ b/Pet-Story/src/app/animals/components/video/video.component.html
@@ -10,7 +10,7 @@
           allowfullscreen></iframe>
     </ng-template>
     <ng-template swiperSlide>
-      <iframe width="1162" height="652" src="https://www.youtube.com/embed/rgXWDk7rh4w"
+      <iframe width="1162" height="652" src="https://www.youtube.com/embed/NdE7bANJIz0"
           frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen>
       </iframe>
@@ -27,13 +27,13 @@
   <swiper (swiper)="thumbsSwiper = $event" [spaceBetween]="30" [slidesPerView]="4" [freeMode]="true" [navigation]="true"
   [watchSlidesProgress]="true" class="mySwiper" #Tswiper>
   <ng-template swiperSlide>
-    <img src="assets/images/pandas.jpg" />
+    <img src="assets/images/gorilla_video.jpg" />
   </ng-template>
   <ng-template swiperSlide>
-    <img src="assets/images/pandas.jpg" />
+    <img src="assets/images/gorilla_video1.jpg" />
   </ng-template>
   <ng-template swiperSlide>
-    <img src="assets/images/pandas.jpg" />
+    <img src="assets/images/gorilla_video.jpg" />
   </ng-template>
 </swiper>
 </section>
