--- a/Pet-Story/src/app/core/components/button/button.component.scss
+++ b/Pet-Story/src/app/core/components/button/button.component.scss
@@ -8,6 +8,8 @@
   text-transform: uppercase;
   color: $white;
   padding: 16px 50px 16px 50px;
+  width: 298px;
+  height: 54px;
   outline: none;
   border: none;
   &:hover {
