--- a/Pet-Story/src/app/animals/components/info/info.component.scss
+++ b/Pet-Story/src/app/animals/components/info/info.component.scss
@@ -6,9 +6,22 @@
     color: $green;
   }
 
+  &__main {
+    display: flex;
+    gap: 70px;
+    margin-bottom: 23px;
+  }
+
   &__content {
-    @include fonts(26px, 140%, 500);        
+    @include fonts(26px, 140%, 500);
     color: $gray_smoky;
+    margin-bottom: 41px;
+  }
+
+  &__line {
+    width: 100%;
+    height: 1px;
+    background: $gray;
   }
 
   &__text {
@@ -44,9 +57,13 @@
     border: 1px solid $black-blue;
     border-radius: 5px;
   }
+  &__full {
+    padding-top: 48px;
+  }
 }
 
 .full {
+
   &__item {
     margin-bottom: 20px;
   }
